@startuml
class DomainNarrative {
  narrative: string
}

abstract class Requirement {
  code: string
  description: string
}

class Actor {
  name: string
  description: string
}

enum PriorityEnum {
  MUST
  SHOULD
  COULD
  WONT
}

enum NFRCategoryEnum {
  RELIABILITY
  USABILITY
  PERFORMANCE
  SECURITY
  COMPATIBILITY
  MAINTAINABILITY
  FLEXIBILITY
}

class FunctionalRequirement {
  objective: string
}

class NonFunctionalRequirement

class BusinessRule

FunctionalRequirement --- PriorityEnum
NonFunctionalRequirement --- PriorityEnum
NonFunctionalRequirement --- NFRCategoryEnum

FunctionalRequirement --- Actor
FunctionalRequirement "0..*" --- "0..*" FunctionalRequirement : depends_on
FunctionalRequirement "0..*" --- "0..*" NonFunctionalRequirement : nfrs_applies_on
FunctionalRequirement "0..*" --- "0..*" BusinessRule : applied_brs

Requirement <|-- FunctionalRequirement
Requirement <|-- NonFunctionalRequirement
Requirement <|-- BusinessRule

enum ActionCategoryEnum {
  INPUT
  OUTPUT
  VALIDATION
  CREATE
  READ
  UPDATE
  DELETE
  INTEGRATION
  SUCCESS
  FAILURE
  CANCEL
}

class Usecase {
  name: string
}

class Event {
  name: string
}

abstract class Step {
  step_code: string
  description: string
}

class Action

class Decision

Usecase "1" --- "1..*" Event
Event "1" --- "1..*" Step
Action "0..*" --- "0..1" Step : next_step
Decision "0..*" --- "0..*" Step : next_steps

Step <|-- Action
Step <|-- Decision

enum TypeEnum {
  STRING
  INTEGER
  BOOLEAN
  FLOAT
}

class Class {
  name: string
  stereotype: string
}

class ClassAttribute {
  name: string
  is_multiple: boolean
  valid_values: string[]
}

class Association

class AssociationClassReference {
  class_min: integer
  class_max: integer | null
}

class Inheritance

abstract class Question {
  question: string
}

Class "1" --- "0..*" ClassAttribute
Class "1" --- "0..*" AssociationClassReference
Association "1" --- "1" AssociationClassReference : source
Association "1" --- "1" AssociationClassReference : target
Class "1" --- "0..*" Inheritance : parent_class
Class "1" --- "0..*" Inheritance : child_class

class NarrativeQuestion

class RequirementQuestion

class UsecaseQuestion

class ClassQuestion

Requirement "1..*" --- "0..*" RequirementQuestion
Usecase "1..*" --- "0..*" UsecaseQuestion
Class "1..*" --- "0..*" ClassQuestion

Question <|-- NarrativeQuestion
Question <|-- RequirementQuestion
Question <|-- UsecaseQuestion
Question <|-- ClassQuestion
@enduml